--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
     <!-- Preloader -->
     <div id="preloader">
       <div class="loader" id="loader-1"></div>
+      <div id="preloader"></div>
+      <script type="text/javascript">
+        $("#preloader")
+        .countdown("2017/01/01", function(event) {
+          $(this).text(
+            event.strftime('%D days %H:%M:%S')
+          );
+        });
+      </script>
     </div>
     <!-- End Preloader -->
 
