--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     <!-- Preloader -->
     <div id="preloader">
       <script type="text/javascript">
-        $(#"time-entry days").text = $("#preloader")
+        $(#"time-entry days").text($("#preloader")
         .countdown("2019/01/01", function(event) {
           $(this).text(
             event.strftime('%D days %H:%M:%S')
           );
-        });
+        }));
       </script>
     </div>
     <!-- End Preloader -->
